full whatsapp design

--- a/whatsapp_design/index.html
+++ b/whatsapp_design/index.html
@@ -30,8 +30,204 @@
                     <ion-icon name="search-outline"></ion-icon>
                 </div>
             </div>
+
+            <!--    CHAT LIST -->
+            <div class="chatlist">
+                <!-- chat 1 -->
+                <div class="block active">
+                    <div class="imgbx">
+                        <img src="./assets/image-douglas-hurley.png" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Charles Madhuku</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>How to make whatsapp clone using html and css</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 2 -->
+                <div class="block unread">
+                    <div class="imgbx">
+                        <img src="./assets/avatar.jpg" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Bro code</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>Lets do java tonight</p>
+                            <b>1</b>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 3 -->
+                <div class="block">
+                    <div class="imgbx">
+                        <img src="./assets/image-anousheh-ansari.webp" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Charles Madhuku</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>How to make whatsapp clone using html and css</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 4 -->
+                <div class="block">
+                    <div class="imgbx">
+                        <img src="./assets/image-avatar.png" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Charles Madhuku</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>How to make whatsapp clone using html and css</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 5 -->
+                <div class="block">
+                    <div class="imgbx">
+                        <img src="./assets/image-douglas-hurley.png" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Charles Madhuku</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>How to make whatsapp clone using html and css</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 6 -->
+                <div class="block">
+                    <div class="imgbx">
+                        <img src="./assets/avatar.jpg" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Charles Madhuku</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>How to make whatsapp clone using html and css</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 7 -->
+                <div class="block">
+                    <div class="imgbx">
+                        <img src="./assets/image-anousheh-ansari.webp" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Charles Madhuku</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>How to make whatsapp clone using html and css</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- chat 8 -->
+                <div class="block">
+                    <div class="imgbx">
+                        <img src="./assets/image-avatar.png" alt="image-douglas-hurley" class="cover">
+                    </div>
+                    <div class="details">
+                        <div class="listHead">
+                            <h4>Stiles</h4>
+                            <p class="time">10:56</p>
+                        </div>
+                        <div class="message_p">
+                            <p>Tailwind is just cool framework</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="rightSide"></div>
+        <!-- RIGHT SIDE -->
+        <div class="rightSide">
+            <div class="header">
+                <div class="imgText">
+                    <div class="userimg">
+                        <img src="./assets/avatar.jpg" alt="userimg" class="cover">
+                    </div>
+                    <h4>Charles Madhuku <br> <span>Online</span></h4>
+                </div>
+                <ul class="nav_icons">
+                    <li><ion-icon name="search-outline"></ion-icon></li>
+                    <li><ion-icon name="ellipsis-vertical"></ion-icon></li>
+                </ul>
+            </div>
+
+            <!-- CHATBOX -->
+            <div class="chatBox">
+                <div class="message my_message">
+                    <p>Hi <br> <span>12:45</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Hello <br> <span>12:46</span></p>
+                </div>
+
+                <div class="message my_message">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda delectus odio id optio
+                        dignissimos tenetur saepe ut aperiam placeat. Dolorum error inventore, eveniet magni excepturi
+                        odio unde a iusto possimus! <br> <span>12:45</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Lorem ipsum dolor sit amet. <br> <span>12:46</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Lorem ipsum <br> <span>12:36</span></p>
+                </div>
+                <div class="message my_message">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo earum ex aspernatur odit possimus
+                        porro provident corrupti maxime sapiente soluta consectetur voluptates, praesentium totam nihil
+                        quas sed fugiat enim consequatur? <br> <span>14:45</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsam. <br> <span>13:46</span></p>
+                </div>
+                <div class="message my_message">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda delectus odio id optio
+                        dignissimos tenetur saepe ut aperiam placeat. Dolorum error inventore, eveniet magni excepturi
+                        odio unde a iusto possimus! <br> <span>12:45</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Lorem ipsum dolor sit amet. <br> <span>12:46</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Lorem ipsum <br> <span>12:36</span></p>
+                </div>
+                <div class="message my_message">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo earum ex aspernatur odit possimus
+                        porro provident corrupti maxime sapiente soluta consectetur voluptates, praesentium totam nihil
+                        quas sed fugiat enim consequatur? <br> <span>14:45</span></p>
+                </div>
+                <div class="message frnd_message">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsam. <br> <span>13:46</span></p>
+                </div>
+            </div>
+            <!-- chat input -->
+            <div class="chatbox_input">
+                <ion-icon name="happy-outline"></ion-icon>
+                <ion-icon name="attach-outline"></ion-icon>
+                <input type="text" placeholder="Type a message">
+                <ion-icon name="mic-outline"></ion-icon>
+            </div>
+        </div>
+
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
